--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@tamagui/babel-plugin": "^1.132.16",
     "@types/react": "~18.3.12",
     "typescript": "~5.6.2"
   }
