--- a/app.json
+++ b/app.json
@@ -3,9 +3,11 @@
     "name": "simple-expo-app",
     "slug": "simple-expo-app",
     "version": "1.0.0",
+    "scheme": "simple-expo-app",
     "platforms": ["web"],
     "web": {
       "bundler": "metro"
-    }
+    },
+    "newArchEnabled": true
   }
 }
