--- a/package.json
+++ b/package.json
@@ -7,19 +7,31 @@
     "dev": "expo start"
   },
   "dependencies": {
-    "expo": "~52.0.11",
-    "expo-linking": "^7.1.7",
-    "expo-router": "~4.0.17",
-    "expo-status-bar": "~2.1.0",
-    "react": "18.3.1",
-    "react-dom": "^18.3.1",
-    "react-native": "0.76.5",
-    "react-native-safe-area-context": "^5.5.2",
-    "react-native-web": "^0.21.0"
+    "@tamagui/animations-react-native": "^1.132.16",
+    "@tamagui/babel-plugin": "^1.132.16",
+    "@tamagui/config": "^1.132.16",
+    "@tamagui/core": "^1.132.16",
+    "@tamagui/font-inter": "^1.132.16",
+    "@tamagui/react-native-media-driver": "^1.132.16",
+    "@tamagui/shorthands": "^1.132.16",
+    "@tamagui/theme-base": "^1.132.16",
+    "@tamagui/themes": "^1.132.16",
+    "expo": "~53.0.20",
+    "expo-linking": "~7.1.7",
+    "expo-router": "~5.1.4",
+    "expo-status-bar": "~2.2.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-web": "^0.20.0",
+    "tamagui": "^1.132.16"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
-    "typescript": "~5.6.2"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~19.0.0",
+    "typescript": "~5.8.3"
   }
 }
